--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:roundIcon="@drawable/logo_phone_shop"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Brand"></activity>
         <activity
             android:name=".NewActivity"
             android:label="@string/title_activity_new"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
